Issue 115 - Track labels obscure data. Added track label visibility toggle button.
Former-commit-id: 0885a32d9b6bbee4c917921b11984182f4c63f33

--- a/css/igv.css
+++ b/css/igv.css
@@ -562,6 +562,39 @@ div.ui-dialog fieldset {
     float: right;
 }
 
+.igvNavigationToggleTrackLabels {
+
+    position: relative;
+    float: right;
+
+    border-style: solid;
+    border-radius: 4px;
+    border-width: thin;
+    border-color: rgb(127, 127, 127);
+
+    margin-right: 64px;
+
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 1px;
+    padding-bottom: 2px;
+
+    font-family: 'Open Sans', sans-serif;
+    font-size: small;
+    font-weight: 400;
+    color: #444;
+
+}
+
+.igvNavigationToggleTrackLabels:hover,
+.igvNavigationToggleTrackLabels:focus,
+.igvNavigationToggleTrackLabels:active  {
+
+    cursor: pointer;
+    border-color: #444;
+
+}
+
 .igvNavigationMarginLeft12 {
 
     margin-left: 12px;
